--- a/templates/mentoring.html
+++ b/templates/mentoring.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% set stripe_payment_link = config.stripe_payment_link or 'https://book.stripe.com/3cIbIUdV5aK94M0bWP4F200' %}
 
 {% block title %}1:1 Tutoring for Animation & Game Dev Careers | Toucan{% endblock %}
 {% block meta_description %}Explore {{ config.name }}'s dedicated tutoring programs. Weekly 1:1 sessions, assignment support, and accountability for animation and game development students worldwide.{% endblock %}
@@ -94,8 +95,8 @@
             </ul>
         </div>
         <div class="package-cta">
-            {% if config.stripe_payment_link %}
-            <a href="{{ config.stripe_payment_link }}" class="cta-button primary-cta">Pay for a session</a>
+            {% if stripe_payment_link %}
+            <a href="{{ stripe_payment_link }}" class="cta-button primary-cta">Pay for a session</a>
             <p class="pricing-note">Complete payment first and you’ll instantly receive the scheduling link.</p>
             {% endif %}
         </div>
