feat(stripe): drive booking CTAs from env vars

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% set stripe_payment_link = config.stripe_payment_link or 'https://book.stripe.com/3cIbIUdV5aK94M0bWP4F200' %}
+{% set stripe_payment_link = config.stripe_payment_link %}
 
 {% block title %}Art, Animation & Game Dev Tutoring | Toucan.ee{% endblock %}
 {% block meta_description %}Book a calm, 60-minute €15 session to get hands-on tutoring in art, animation, or game dev. Finish something small each call with live feedback, practice tasks, and a next-step plan.{% endblock %}
