--- a/templates/mentoring.html
+++ b/templates/mentoring.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% set stripe_payment_link = config.stripe_payment_link or 'https://book.stripe.com/3cIbIUdV5aK94M0bWP4F200' %}
+{% set stripe_payment_link = config.stripe_payment_link %}
 
 {% block title %}1:1 Tutoring for Animation & Game Dev Careers | Toucan{% endblock %}
 {% block meta_description %}Explore {{ config.name }}'s dedicated tutoring programs. Weekly 1:1 sessions, assignment support, and accountability for animation and game development students worldwide.{% endblock %}
