--- a/templates/tutoring.html
+++ b/templates/tutoring.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% set stripe_payment_link = config.stripe_payment_link or 'https://book.stripe.com/3cIbIUdV5aK94M0bWP4F200' %}
+{% set stripe_payment_link = config.stripe_payment_link %}
 
 {% block title %}Book the €15 Beginner Sprint{% endblock %}
 {% block content %}
